--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -1,5 +1,8 @@
 /* This stylesheet is where to add styles for your Shakespeare Home Page */
 
+
+  @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400&family=Source+Serif+Pro:wght@300;400&display=swap');
+
 * {
   margin: 0;
   padding: 0;
@@ -7,16 +10,41 @@
 }
 
 body {
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  /* font-family: Verdana, Geneva, Tahoma, sans-serif; */
   /*your style rules go in here */
+  font-family: 'Roboto Slab', Verdana, serif;
+  background-color: rgb(90, 170, 70);
+  padding-top: 3em;
+  background-image: url("../images/pexels-pixabay-235985.jpg");
+background-repeat: repeat;
 }
 
 header {
+/* border: 1px solid rgb(19, 198, 19); */
+background-color: rgb(2, 43, 2);
+color: white;
+position: fixed;
+top:0;
+height: 4em;
+width: 100%;
+z-index: 100;
+}
 
+h1 {
+  text-align: center;
+  line-height: 2em;
 }
 
 main {
-
+width: 80%;
+max-width: 900px;
+/* border: 2px solid red; */
+margin-top:12px;
+margin-left: auto;
+margin-right: auto;
+background-color: white;
+padding: 2em;
+position:relative;
 }
 
 section {
@@ -25,9 +53,98 @@ section {
 
 
 figure {
- 
+ width:45%;
+ margin: 0 auto;
+ /* border: 1px solid red; */
+ float:right;
+ margin-left: .5em;
 }
+
+img {
+  display: block;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.info {
+  display: block;
+}
+
+
+p {
+  margin-bottom: 1em;
+  color:rgb(68, 76, 68);
+  text-align: left;
+  line-height: 1.6;
+}
+
+.playlink {
+  clear:both;
+}
+
+.playlink a {
+  color: white;
+  text-decoration: none;
+  background-color: green;
+  padding: 4px;
+}
+
+ul {
+  margin: .5em 0;
+  list-style-position: inside;
+  font-size: .8em;
+}
+
+li {
+  margin-bottom: .1em;
+}
+
+.perform {
+  color:purple;
+}
+
 
 footer {
-
+/* border:1px solid purple; */
+text-align: center;
+position:fixed;
+bottom:0;
+width:100%;
+color:white;
+background-color: cornflowerblue;
+height: 2em;
 }
+
+@media (max-width: 600px) {
+
+  figure {
+    width:75%;
+    margin: 0 auto;
+    /* border: 1px solid red; */
+    float:none;
+    margin: 0 auto;
+   }
+
+main {
+  width:100%;
+  margin:0;
+  padding: 1em;
+}
+
+body {
+  background-color: white;
+  padding-top: 1em;
+}
+
+h1 {
+  font-size: 1em;
+}
+
+header {
+  height: 2em;
+}
+}
+
+
+
+
