--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -15,7 +15,7 @@ body {
   font-family: 'Roboto Slab', Verdana, serif;
   background-color: rgb(90, 170, 70);
   padding-top: 3em;
-  background-image: url("../images/pexels-pixabay-235985.jpg");
+/*   background-image: url("../images/pexels-pixabay-235985.jpg"); */
 background-repeat: repeat;
 }
 
