--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -17,7 +17,7 @@ body {
   /* font-family: Verdana, Geneva, Tahoma, sans-serif; */
   /*your style rules go in here */
   font-family: 'Roboto Slab', Verdana, serif;
-  background-color: rgb(188, 238, 176);
+  /* background-color: rgb(188, 238, 176); */
   padding-top: 3em;
   /* background-image: url("../images/pexels-pixabay-235985.jpg"); */
 /* background-repeat: repeat; */
