--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -11,6 +11,7 @@
 
 html {
   background: linear-gradient(0deg, rgba(23,68,6,1) 0%, rgba(167,203,157,1) 100%);
+  height: 100%;
 }
 
 body {
@@ -21,7 +22,9 @@ body {
   padding-top: 3em;
   /* background-image: url("../images/pexels-pixabay-235985.jpg"); */
 /* background-repeat: repeat; */
-
+display:flex;
+flex-direction: column;
+justify-content: center;
 }
 
 header {
@@ -44,12 +47,12 @@ main {
 width: 80%;
 max-width: 900px;
 /* border: 2px solid red; */
-margin-top:12px;
+margin-top:3em;
 margin-left: auto;
 margin-right: auto;
 background-color: white;
 padding: 2em;
-position:relative;
+flex-basis: auto;
 }
 
 section {
@@ -116,7 +119,7 @@ position:fixed;
 bottom:0;
 width:100%;
 color:white;
-background-color: cornflowerblue;
+background-color: rgb(11, 41, 7);
 height: 2em;
 }
 
@@ -138,7 +141,7 @@ main {
 
 body {
   background-color: white;
-  padding-top: 1em;
+  padding-top: 2em;
 }
 
 h1 {
