--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -19,12 +19,13 @@ body {
   /*your style rules go in here */
   font-family: 'Roboto Slab', Verdana, serif;
   /* background-color: rgb(188, 238, 176); */
-  padding-top: 3em;
+  /* padding-top: 3em; */
   /* background-image: url("../images/pexels-pixabay-235985.jpg"); */
 /* background-repeat: repeat; */
-display:flex;
-flex-direction: column;
-justify-content: center;
+display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
 }
 
 header {
@@ -47,12 +48,11 @@ main {
 width: 80%;
 max-width: 900px;
 /* border: 2px solid red; */
-margin-top:3em;
+/* margin-top:3em; */
 margin-left: auto;
 margin-right: auto;
 background-color: white;
 padding: 2em;
-flex-basis: auto;
 }
 
 section {
@@ -113,14 +113,17 @@ li {
 
 
 footer {
-/* border:1px solid purple; */
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+font-size: .6em;
 text-align: center;
 position:fixed;
 bottom:0;
 width:100%;
 color:white;
 background-color: rgb(11, 41, 7);
-height: 2em;
+height: 4em;
+line-height: 4;
+
 }
 
 @media (max-width: 600px) {
@@ -135,6 +138,7 @@ height: 2em;
 
 main {
   width:100%;
+  
   margin:0;
   padding: 1em;
 }
@@ -142,6 +146,7 @@ main {
 body {
   background-color: white;
   padding-top: 2em;
+  display:block;
 }
 
 h1 {
